feat: update proto-gen directory

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -7,12 +7,12 @@ managed:
       - buf.build/googleapis/googleapis
 plugins:
   - plugin: buf.build/protocolbuffers/go:v1.31.0
-    out: proto
+    out: proto/gen
     opt: paths=source_relative
   - plugin: buf.build/connectrpc/go:v1.11.0
-    out: proto
+    out: proto/gen
     opt: paths=source_relative
   # gRPC generated code is used by vanguardgrpc examples
   - plugin: buf.build/grpc/go:v1.3.0
-    out: proto
+    out: proto/gen
     opt: paths=source_relative
