--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -2,17 +2,17 @@ version: v1
 managed:
   enabled: true
   go_package_prefix:
-    default: github.com/anhnmt/golang-gateway-boilerplate/proto
+    default: github.com/anhnmt/golang-gateway-boilerplate/proto/gengo
     except:
       - buf.build/googleapis/googleapis
 plugins:
   - plugin: buf.build/protocolbuffers/go:v1.31.0
-    out: proto/gen
+    out: proto/gengo
     opt: paths=source_relative
   - plugin: buf.build/connectrpc/go:v1.11.0
-    out: proto/gen
+    out: proto/gengo
     opt: paths=source_relative
   # gRPC generated code is used by vanguardgrpc examples
   - plugin: buf.build/grpc/go:v1.3.0
-    out: proto/gen
+    out: proto/gengo
     opt: paths=source_relative
