chore(base): update env redis

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,17 @@
+
+# APP
 APP_NAME=golang-gateway-boilerplate
 APP_PORT=8000
 
+# LOG
 LOG_PAYLOAD=true
 
+# PPROF
 PPROF_ENABLED=true
 PPROF_PORT=6060
+
+# REDIS
+REDIS_ENABLED=true
+REDIS_ADDRESS=127.0.0.1:6379
+REDIS_PASSWORD=123456aA@
+REDIS_DB=0
