feat: update database config

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,16 @@ LOG_PAYLOAD=true
 PPROF_ENABLED=true
 PPROF_PORT=6060
 
+# DATABASE
+DB_ENABLED=true
+DB_DEBUG=false
+DB_MIGRATION=true
+DB_PGBOUNCER=true
+DB_MAX_OPEN_CONNS=15
+DB_MAX_IDLE_CONNS=5
+DB_MAX_LIFETIME=5
+DB_URL=postgres://root:123456aA@@localhost:26257/gateway?sslmode=disable
+
 # REDIS
 REDIS_ENABLED=true
 REDIS_ADDRESS=127.0.0.1:6379
